Use PatientReference as well to start DataSend process